codepkg/objects/User_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <description>This field is used in MARS application to determine the access level they want for each agency</description>
        <inlineHelpText>User&apos;s access level</inlineHelpText>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_County__c</fullName>
        <label>Address County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Alameda</fullName>
                </value>
                <value>
                    <fullName>02 - Alpine</fullName>
                </value>
                <value>
                    <fullName>03 - Amador</fullName>
                </value>
                <value>
                    <fullName>04 - Butte</fullName>
                </value>
                <value>
                    <fullName>05 - Calaveras</fullName>
                </value>
                <value>
                    <fullName>06 - Colusa</fullName>
                </value>
                <value>
                    <fullName>07 - Contra Costa</fullName>
                </value>
                <value>
                    <fullName>08 - Del Norte</fullName>
                </value>
                <value>
                    <fullName>09 - El Dorado</fullName>
                </value>
                <value>
                    <fullName>10 - Fresno</fullName>
                </value>
                <value>
                    <fullName>11 - Glenn</fullName>
                </value>
                <value>
                    <fullName>12 - Humboldt</fullName>
                </value>
                <value>
                    <fullName>13 - Imperial</fullName>
                </value>
                <value>
                    <fullName>14 - Inyo</fullName>
                </value>
                <value>
                    <fullName>15 - Kern</fullName>
                </value>
                <value>
                    <fullName>16 - Kings</fullName>
                </value>
                <value>
                    <fullName>17 - Lake</fullName>
                </value>
                <value>
                    <fullName>18 - Lassen</fullName>
                </value>
                <value>
                    <fullName>19 - Los Angeles</fullName>
                </value>
                <value>
                    <fullName>20 - Madera</fullName>
                </value>
                <value>
                    <fullName>21 - Marin</fullName>
                </value>
                <value>
                    <fullName>22 - Mariposa</fullName>
                </value>
                <value>
                    <fullName>23 - Mendocino</fullName>
                </value>
                <value>
                    <fullName>24 - Merced</fullName>
                </value>
                <value>
                    <fullName>25 - Modoc</fullName>
                </value>
                <value>
                    <fullName>26 - Mono</fullName>
                </value>
                <value>
                    <fullName>27 - Monterey</fullName>
                </value>
                <value>
                    <fullName>28 - Napa</fullName>
                </value>
                <value>
                    <fullName>29 - Nevada</fullName>
                </value>
                <value>
                    <fullName>30 - Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalOES_Main_Portal_Base_URL__c</fullName>
        <description>Cal OES Main Portal Base URL</description>
        <formula>$Label.CalOES_Main_Portal_Base_URL</formula>
        <inlineHelpText>Cal OES Main Portal Base URL</inlineHelpText>
        <label>CalOES Main Portal Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Entity_Type__c</field>
                <operation>equals</operation>
                <value>City</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (City)</relationshipLabel>
        <relationshipName>User_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Application</label>
        <referenceTo>Community_Application__c</referenceTo>
        <relationshipLabel>Community Registration</relationshipLabel>
        <relationshipName>CommunityRegistration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Registrations</relationshipLabel>
        <relationshipName>User_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>User__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda, County of</fullName>
                </value>
                <value>
                    <fullName>Alpine, County of</fullName>
                </value>
                <value>
                    <fullName>Amador, County of</fullName>
                </value>
                <value>
                    <fullName>Butte, County of</fullName>
                </value>
                <value>
                    <fullName>Calaveras, County of</fullName>
                </value>
                <value>
                    <fullName>Colusa, County of</fullName>
                </value>
                <value>
                    <fullName>Contra Costa, County of</fullName>
                </value>
                <value>
                    <fullName>Del Norte, County of</fullName>
                </value>
                <value>
                    <fullName>El Dorado, County of</fullName>
                </value>
                <value>
                    <fullName>Fresno, County of</fullName>
                </value>
                <value>
                    <fullName>Glenn, County of</fullName>
                </value>
                <value>
                    <fullName>Humboldt, County of</fullName>
                </value>
                <value>
                    <fullName>Imperial, County of</fullName>
                </value>
                <value>
                    <fullName>Inyo, County of</fullName>
                </value>
                <value>
                    <fullName>Kern, County of</fullName>
                </value>
                <value>
                    <fullName>Kings, County of</fullName>
                </value>
                <value>
                    <fullName>Lake, County of</fullName>
                </value>
                <value>
                    <fullName>Lassen, County of</fullName>
                </value>
                <value>
                    <fullName>Los Angeles, County of</fullName>
                </value>
                <value>
                    <fullName>Madera, County of</fullName>
                </value>
                <value>
                    <fullName>Marin, County of</fullName>
                </value>
                <value>
                    <fullName>Mariposa, County of</fullName>
                </value>
                <value>
                    <fullName>Mendocino, County of</fullName>
                </value>
                <value>
                    <fullName>Merced, County of</fullName>
                </value>
                <value>
                    <fullName>Modoc, County of</fullName>
                </value>
                <value>
                    <fullName>Mono, County of</fullName>
                </value>
                <value>
                    <fullName>Monterey, County of</fullName>
                </value>
                <value>
                    <fullName>Napa, County of</fullName>
                </value>
                <value>
                    <fullName>Nevada, County of</fullName>
                </value>
                <value>
                    <fullName>Orange, County of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Courts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Courts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Courts)</relationshipLabel>
        <relationshipName>User_Registrations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>English_Language_Proficiency__c</fullName>
        <description>How well does the applicant speak English?</description>
        <inlineHelpText>How well does the applicant speak English?</inlineHelpText>
        <label>English Language Proficiency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Governmental Entity</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
                <value>
                    <fullName>Special District</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
                <value>
                    <fullName>Fire Agency</fullName>
                </value>
                <value>
                    <fullName>MARS Paying Entity</fullName>
                </value>
                <value>
                    <fullName>Federal Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Facility)</relationshipLabel>
        <relationshipName>User_Registrations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Federal_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Federal Agency)</relationshipLabel>
        <relationshipName>User_Registrations8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Federal Tax ID #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for users who wants to register as a contact for fire agencies. MARS app uses this field the most.</description>
        <label>Fire Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Fire Agency</value>
            </filterItems>
            <infoMessage>Please choose the Fire Agency (MARS Application)</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Fire Agency)</relationshipLabel>
        <relationshipName>User_Registrations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Relative_URL__c</fullName>
        <description>HH-Relative URL for Lightning Email templates of Set and Reset Password</description>
        <formula>$Label.HH_Community_BaseURL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CWMP-Relative URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Mailing_Address_Different__c</fullName>
        <label>Is Mailing Address Different?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Mailing_Address_a_Foreign_Address__c</fullName>
        <label>Is Mailing Address a Foreign Address?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Physical_Address_a_Foreign_Address__c</fullName>
        <label>Is Physical Address a Foreign Address?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARS_Paying_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MARS Paying Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (MARS Paying Entity)</relationshipLabel>
        <relationshipName>User_Registrations7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>City Name in Mailing Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City Name in Mailing Address.</inlineHelpText>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country_Region__c</fullName>
        <description>Country/Region in Mailing Address.</description>
        <inlineHelpText>Country/Region in Mailing Address.</inlineHelpText>
        <label>Mailing Country/Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <description>State/Province in Mailing Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>State/Province in Mailing Address.</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code in Mailing Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Zip/Postal Code in Mailing Address.</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Government_Entity_Type__c</fullName>
        <label>Non-Government Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Care Facility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Governmental_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Governmental Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>What is your preferred language?</description>
        <inlineHelpText>What is your preferred language?</inlineHelpText>
        <label>Applicant&apos;s Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hindi (Urdu)</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Thai (Laotian)</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Yiddish</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                    <isActive>false</isActive>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                    <isActive>false</isActive>
                    <label>Chinese (Traditional)</label>
                </value>
                <value>
                    <fullName>Danish</fullName>
                    <isActive>false</isActive>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                    <isActive>false</isActive>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                    <isActive>false</isActive>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                    <isActive>false</isActive>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                    <isActive>false</isActive>
                    <label>Portuguese (Brazil)</label>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                    <isActive>false</isActive>
                    <label>Spanish (Mexico)</label>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                    <isActive>false</isActive>
                    <label>Swedish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Denied</fullName>
                </value>
                <value>
                    <fullName>Entity Change Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Secondary Contact Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Secondary Contact Number.</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special District</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Special District</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Special District)</relationshipLabel>
        <relationshipName>User_Registrations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Entity_Type__c</field>
                <operation>equals</operation>
                <value>State Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations</relationshipLabel>
        <relationshipName>User_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>